apps/landingpage/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landingpage
  namespace: landingpage
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  selector:
    app: landingpage
